--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,18 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
-    <script src="javascripts/html5.js"></script>
+    <script src="../javascripts/html5.js"></script>
     <![endif]-->
 	</head>
 	<body>
 	<header>
       <div class="inner">
-        <h1>商城说明首页</h1>
+        <h1>{{ title }}</h1>
         <h2></h2>
         <a href="https://github.com/findever/mall_doc" class="button"><small>View project on</small> GitHub</a>
       </div>
