--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
-    <script src="{{ site.baseurl }/javascripts/html5.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/html5.js"></script>
     <![endif]-->
 	</head>
 	<body>
