--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }/stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }/stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print">
 
     <!--[if lt IE 9]>
-    <script src="{{ site.baseurl }/javascripts/html5.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/html5.js"></script>
     <![endif]-->
 	</head>
 	<body>
