--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/pygment_trac.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print">
-
-    <!--[if lt IE 9]>
-    <script src="{{ site.baseurl }}/javascripts/html5.js"></script>
-    <![endif]-->
+	<head>
+		<meta charset='utf-8'>
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/pygment_trac.css" media="screen">
+		<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print">
+		<!--[if lt IE 9]>
+		<script src="{{ site.baseurl }}/javascripts/html5.js"></script>
+		<![endif]-->
 	</head>
 	<body>
-	<header>
-      <div class="inner">
-        <h1>{{ page.title }} by {{ page.author }}</h1>
-        <h2></h2>
-        <a href="https://github.com/findever/mall_doc" class="button"><small>View project on</small> GitHub</a>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-		{{ content }}
-		</section>
-
-        <aside id="sidebar">
-          <a href="https://github.com/findever/mall_doc/zipball/master" class="button">
-            <small>Download</small>
-            .zip file
-          </a>
-          <a href="https://github.com/findever/mall_doc/tarball/master" class="button">
-            <small>Download</small>
-            .tar.gz file
-          </a>
-
-          <p class="repo-owner"><a href="https://github.com/findever/mall_doc"></a> is maintained by <a href="https://github.com/findever">findever</a>.</p>
-
-        </aside>
-      </div>
-    </div>
+		<header>
+			<div class="inner">
+				<h1>{{ page.title }}</h1>
+				<span>分类：{{ page.category | first }} 作者：{{ page.author }}</span>
+				<a href="https://github.com/findever/mall_doc" class="button"><small>View project on</small> GitHub</a>
+			</div>
+		</header>
+		<div id="content-wrapper">
+			<div class="inner clearfix">
+				<section id="main-content">
+					{{ content }}
+				</section>
+				<aside id="sidebar">
+					<a href="https://github.com/findever/mall_doc/zipball/master" class="button">
+						<small>Download</small>
+						.zip file
+					</a>
+					<a href="https://github.com/findever/mall_doc/tarball/master" class="button">
+						<small>Download</small>
+						.tar.gz file
+					</a>
+					<p class="repo-owner"><a href="https://github.com/findever/mall_doc"></a> is maintained by <a href="https://github.com/findever">findever</a>.</p>
+				</aside>
+			</div>
+		</div>
 	</body>
 </html>
