--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="inner">
 				<h1>{{ page.title }}</h1>
-				<span>分类：{{ page.category }} 作者：{{ page.author }}</span>
+				<span>作者：{{ page.author }}</span>
 				<a href="https://github.com/findever/mall_doc" class="button"><small>View project on</small> GitHub</a>
 			</div>
 		</header>
