--- a/_includes/themes/Snail/footer.html
+++ b/_includes/themes/Snail/footer.html
@@ -1,21 +1,18 @@
 <footer>
 	<div class="footer-940">
 		<div class="footer-general-info">
-			© 2014 {{ site.author.name }}.<br><br>
-			Content licensed under:<br>
-			<a class="cc" href="http://creativecommons.org/licenses/by-sa/3.0/">c a b</a><br>
-			<a href = "{{ site.JB.about_path }}">About Me</a><br>
+			© 2014 {{ site.author.name }}.
 		</div>
 		<div class="footer-col-cont">
 			<div class="footer-nav-col">
-				<h4><a>Categories</a></h4>
+				<h4><a>分类</a></h4>
 				<ul>
 					{% assign categories_list = site.categories %}
 					{% include JB/categories_list %}
 				</ul>
 			</div>
 			<div class="footer-nav-col">
-				<h4><a>Pages</a></h4>
+				<h4><a>页面</a></h4>
 				<ul>
 					{% assign pages_list = site.pages %}
 					{% assign group = 'navigation' %}
@@ -23,14 +20,14 @@
 				</ul>
 			</div>
 			<div class="footer-nav-col">
-				<h4><a>Feed</a></h4>
+				<h4><a>订阅</a></h4>
 				<ul>
 					<li><a href="{{ BASE_PATH }}{{ site.JB.atom_path }}">Atom Feed</a></li>
 					<li><a href="{{ BASE_PATH }}{{ site.JB.rss_path }}">RSS Feed</a></li>
 				</ul>
 			</div>
 			<div class="footer-nav-col">
-				<h4><a>Links</a></h4>
+				<h4><a>链接</a></h4>
 				<ul>
 				{% for link in site.links %} 
 					<li><a href = "{{ link[1] }}">{{ link[0] }}</a></li>
@@ -38,7 +35,7 @@
 				</ul>
 			</div>
 			<div class="footer-nav-col">
-				<h4><a href = "{{ site.JB.about_path }}">About Me</a></h4>
+				<h4><a href = "{{ site.JB.about_path }}">维护</a></h4>
 				<ul>
 				{% for contact in site.contact %} 
 					<li><a href = "{{ contact[1] }}">{{ contact[0] }}</a></li>
