语法高亮测试

--- a/_includes/themes/Snail/nav.html
+++ b/_includes/themes/Snail/nav.html
@@ -29,7 +29,7 @@
 				<div id="search-left-pix">
 					<div id="search-center-pix">
 						<div id="search-icon-pix"></div>
-						<input name="query" type="text" placeholder="Search">
+						<input name="query" type="text" placeholder="搜索">
 					</div>
 				</div>
 			</div>
