--- a/assets/themes/Snail/css/main.css
+++ b/assets/themes/Snail/css/main.css
@@ -42,10 +42,31 @@ ins {
 del {
 	text-decoration:line-through;
 }
+/*表格样式修改*/
 table {
-	border-collapse:collapse;
 	border-spacing:0;
+	font-family: verdana,arial,sans-serif;
+	font-size:11px;
+	color:#333333;
+	border-width: 1px;
+	border-color: #666666;
+	border-collapse: collapse;
 }
+table th {
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #dedede;
+}
+table td {
+	border-width: 1px;
+	padding: 8px;
+	border-style: solid;
+	border-color: #666666;
+	background-color: #ffffff;
+}
+/*表格样式修改*/
 html,body {
 	color:#4D4D4D;
 	font-size:14px;
