--- a/_includes/themes/Snail/post.html
+++ b/_includes/themes/Snail/post.html
@@ -2,21 +2,24 @@
 	<div class="cont932">
 	<div id="journal-articles-block">
 		<div class="journal-article">
-			<div class="journal-post-info">
+
+			<!-- 去掉分类标识 -->
+		<!-- 	<div class="journal-post-info">
 				<div class="journal-cat-box">
 				{% assign categories_list = page.categories %}
 				{% assign category = categories_list.first %}
 				{% include themes/Snail/category.html %}
 				{% assign categories_list = nil %}
 				</div>
-			</div>
+			</div> -->
+			
 			<div class="journal-body">
 				<h1 class="journal-title">{{ page.title }}<span class="author">{% if page.tagline %}{{page.tagline}}{% endif %}</span>
 				</h1>
 				<span class="the-article">
 				{{ content }}
 				</span>
-				<div class="journal-date">Published {{ page.date | date_to_long_string }}</div>
+				<div class="journal-date">发布于 {{ page.date | date:"%m/%d  %Y" }}</div>
 				<div class="journal-tags">
 				{% assign tags_list = page.tags %}
 				{% include themes/Snail/tags_list %}
