--- a/assets/themes/Snail/css/main.css
+++ b/assets/themes/Snail/css/main.css
@@ -6,7 +6,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 	font-size:100%;
 	font:inherit;
 	vertical-align:baseline;
-	font-family:"Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:25px;
+
+}
+html,body{
+		font-family:"Microsoft Yahei","Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:25px;
 }
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 	display:block;
