--- a/_includes/themes/Snail/archive.html
+++ b/_includes/themes/Snail/archive.html
@@ -10,7 +10,7 @@
 			{% assign posts_collate = site.posts %}
 			{% for post in posts_collate  %}
 			{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-			{% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
+			{% capture this_month %}{{ post.date | date: "%m" }}{% endcapture %}
 			{% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 			{% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 			
@@ -21,7 +21,7 @@
 			  <ul>
 			{% endif %}
 			
-			<li><span>{{ post.date | date: "%B %e, %Y" }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
+			<li><span>{{ post.date | date: "%Y/%m/%d" }}</span> &raquo; <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a></li>
 			
 			{% if forloop.last %}
 			  </ul>
