--- a/_includes/themes/Snail/post.html
+++ b/_includes/themes/Snail/post.html
@@ -19,7 +19,7 @@
 				<span class="the-article">
 				{{ content }}
 				</span>
-				<div class="journal-date">发布于 {{ page.date | date:"%m/%d  %Y" }}</div>
+				<div class="journal-date">发布于 {{ page.date | date:"%Y/%m/%d" }}</div>
 				<div class="journal-tags">
 				{% assign tags_list = page.tags %}
 				{% include themes/Snail/tags_list %}
