--- a/_includes/themes/Snail/archive.html
+++ b/_includes/themes/Snail/archive.html
@@ -10,7 +10,7 @@
 			{% assign posts_collate = site.posts %}
 			{% for post in posts_collate  %}
 			{% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-			{% capture this_month %}{{ post.date | date: "%m" }}{% endcapture %}
+			{% capture this_month %}{{ post.date | date: "%B" }}{% endcapture %}
 			{% capture next_year %}{{ post.previous.date | date: "%Y" }}{% endcapture %}
 			{% capture next_month %}{{ post.previous.date | date: "%B" }}{% endcapture %}
 			
