--- a/_includes/themes/Snail/archive.html
+++ b/_includes/themes/Snail/archive.html
@@ -16,8 +16,8 @@
 			
 			{% if forloop.first %}
 			  <div  class="team-member">
-			  <h2>{{this_year}}</h2>
-			  <h3>{{this_month | date: "%m"}}</h3>
+			  <h2>{{this_year}}年</h2>
+			  <h3>{{this_month | date: "%m"}}月</h3>
 			  <ul>
 			{% endif %}
 			
